﻿Version 5.0.0
MVC 6
- Upgraded to ASP.NET Core 1.1.
- Upgraded all NuGet packages.
- Removed experimental .cshtml minification feature.
- Added primary and reverse proxy web server features. Added Web Listener web server.
- Added response caching middleware.
- Added response compression middleware.
- Added current project as tag helper source to _ViewImports.cshtml so that View Components can be used as tag helpers.

Version 4.7.0
MVC 6
- Add the Cache-Control HTTP header to the static files middleware and make it config driven.
- Removed bower.json, using package.json instead.
- Upgraded applicationinsights-js from 0.22.9 to 1.0.4.
- Upgraded Bootstrap from 3.3.6 to 3.3.7.
- Upgraded Font Awesome from 4.6.3 to 4.7.0.
- Upgraded jQuery from 2.2.3 to 3.1.1.
- Upgraded jquery-validation from 1.15.0 to 1.15.1.
- Upgraded mocha from 2.4.5 to 3.1.2.
- Upgraded sinon from 1.17.4 to 1.17.6.
- Updated several Gulp packages to the latest versions.
- Added the Typescript NPM package if TypeScript feature is used.
- Removed Subresource Integrity (SRI) from jquery-validation and jquery-validation-unobtrusive. The NPM package does
  not include a minified copy.
- Removed Modernizr.
- Use the new portable .pdb file format in project.json buildOptions.

Version 4.6.0
MVC 5 & MVC 6
- Added item to ReadMe.html to use the Google CSP Evaluator to validate the sites CSP policy.
MVC 6
- Added a CORS feature.
- project.json publishOptions updated to use globs to copy cshtml files.
- launchSettings.json updated to add profiles to run the app using the Staging and Production environments.
- Add crossorigin="anonymous" attribute to external scripts supporting Access-Control-Allow-Origin: *.

Version 4.5.0
MVC 6
- Added 'dotnet watch' launch profile to launchSettings.json, allowing you to edit code and refresh the browser to see your changes while
  the app is running.

Version 4.4.0
MVC 6
- Added Web Server feature that lets you select which web server you want to target.