@@ -79,6 +79,7 @@
     <Compile Include="Features\Hidden\RemoveRuntimeInfoPageFeature.cs" />
     <Compile Include="Features\Hidden\RemoveServicesNamespaceFeature.cs" />
     <Compile Include="Features\Hidden\SetRandomPortsFeature.cs" />
+    <Compile Include="Features\Hosting\CloudProviderFeature.cs" />
     <Compile Include="Features\Monitoring\ApplicationInsightsFeature.cs" />
     <Compile Include="Features\Other\FeedFeature.cs" />
     <Compile Include="Features\Other\HttpExceptionFeature.cs" />
@@ -88,8 +89,8 @@
     <Compile Include="Features\Pages\AboutPageFeature.cs" />
     <Compile Include="Features\Pages\ContactPageFeature.cs" />
     <Compile Include="Features\Performance\GooglePageSpeedFeature.cs" />
-    <Compile Include="Features\WebServer\PrimaryWebServerFeature.cs" />
-    <Compile Include="Features\WebServer\ReverseProxyWebServerFeature.cs" />
+    <Compile Include="Features\Hosting\PrimaryWebServerFeature.cs" />
+    <Compile Include="Features\Hosting\ReverseProxyWebServerFeature.cs" />
     <Compile Include="Features\Project\TargetFrameworkFeature.cs" />
     <Compile Include="Features\Rest\SwaggerFeature.cs" />
     <Compile Include="Features\Security\CorsFeature.cs" />
