@@ -22,9 +22,10 @@
                     builder.RegisterType<NpmPackageNameFeature>().AsSelf().As<IFeature>().SingleInstance();
                     // Target Framework
                     builder.RegisterType<TargetFrameworkFeature>().AsSelf().As<IFeature>().SingleInstance();
-                    // Web Server
+                    // Hosting
                     builder.RegisterType<PrimaryWebServerFeature>().AsSelf().As<IFeature>().SingleInstance();
                     builder.RegisterType<ReverseProxyWebServerFeature>().AsSelf().As<IFeature>().SingleInstance();
+                    builder.RegisterType<CloudProviderFeature>().AsSelf().As<IFeature>().SingleInstance();
                     // CSS and JavaScript
                     builder.RegisterType<FrontEndFrameworkFeature>().AsSelf().As<IFeature>().SingleInstance();
                     builder.RegisterType<TypeScriptFeature>().AsSelf().As<IFeature>().SingleInstance();
