@@ -1,0 +1,65 @@
+﻿namespace Boilerplate.FeatureSelection.Features
+{
+    using System.Threading.Tasks;
+    using Boilerplate.FeatureSelection.Services;
+
+    public class CloudProviderFeature : BinaryChoiceFeature
+    {
+        public CloudProviderFeature(IProjectService projectService)
+            : base(projectService)
+        {
+        }
+
+        public override string Description
+        {
+            get { return "Select which cloud provider you are using if any."; }
+        }
+
+        public override IFeatureGroup Group
+        {
+            get { return FeatureGroups.Hosting; }
+        }
+
+        public override string Icon
+        {
+            get { return "/Boilerplate.FeatureSelection;component/Assets/Azure.png"; }
+        }
+
+        public override string Id
+        {
+            get { return "CloudProvider"; }
+        }
+
+        public override bool IsSelectedDefault
+        {
+            get { return true; }
+        }
+
+        public override bool IsVisible
+        {
+            get { return true; }
+        }
+
+        public override int Order
+        {
+            get { return 3; }
+        }
+
+        public override string Title
+        {
+            get { return "Cloud Provider"; }
+        }
+
+        protected override async Task AddFeature()
+        {
+            await this.ProjectService.EditCommentInFile(this.Id, EditCommentMode.LeaveCodeUnchanged, @"Program.cs");
+            await this.ProjectService.EditCommentInFile(this.Id, EditCommentMode.LeaveCodeUnchanged, @"project.json");
+        }
+
+        protected override async Task RemoveFeature()
+        {
+            await this.ProjectService.EditCommentInFile(this.Id, EditCommentMode.DeleteCode, @"Program.cs");
+            await this.ProjectService.EditCommentInFile(this.Id, EditCommentMode.DeleteCode, @"project.json");
+        }
+    }
+}
