@@ -6,6 +6,7 @@ MVC 6
 - Added primary and reverse proxy web server features. Added Web Listener web server.
 - Added response caching middleware.
 - Added response compression middleware.
+- Added cloud provider feature which adds logging integration into the Azure portal.
 - Added current project as tag helper source to _ViewImports.cshtml so that View Components can be used as tag helpers.
 
 Version 4.7.0
